feat: complete phases 1-6 (security hardening, rbac, flyway db, invitations, ws chat, financial bigdecimal overhaul)