@@ -12,6 +12,8 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.util.Base64;
 import java.util.HashMap;
 import java.util.List;
@@ -35,23 +37,24 @@ public class ReceiptOcrService {
             throw new IllegalArgumentException("Receipt file cannot be empty");
         }
 
-        if (geminiApiKey != null && !geminiApiKey.trim().isEmpty()) {
-            try {
-                String base64Image = Base64.getEncoder().encodeToString(file.getBytes());
-                String mimeType = file.getContentType() != null ? file.getContentType() : "image/jpeg";
-                return callGeminiVisionApi(base64Image, mimeType);
-            } catch (Exception e) {
-                log.error("Gemini OCR parsing failed, using fallback parser: {}", e.getMessage());
-            }
+        if (geminiApiKey == null || geminiApiKey.trim().isBlank()) {
+            throw new IllegalStateException("Receipt OCR service unavailable: GEMINI_API_KEY is not configured.");
         }
 
-        return generateFallbackReceiptData(file.getOriginalFilename());
+        try {
+            String base64Image = Base64.getEncoder().encodeToString(file.getBytes());
+            String mimeType = file.getContentType() != null ? file.getContentType() : "image/jpeg";
+            return callGeminiVisionApi(base64Image, mimeType);
+        } catch (Exception e) {
+            log.error("Gemini OCR parsing failed for file {}: {}", file.getOriginalFilename(), e.getMessage());
+            throw new IllegalArgumentException("Failed to scan receipt image: " + e.getMessage(), e);
+        }
     }
 
     private Map<String, Object> callGeminiVisionApi(String base64Data, String mimeType) throws Exception {
         String url = "https://generativelanguage.googleapis.com/v1beta/models/" + geminiModel + ":generateContent?key=" + geminiApiKey.trim();
 
-        String prompt = "Analyze this receipt image. Extract the total expense amount, short itemized description or merchant name, date, and suggested category (Food, Stay, Transit, Entertainment, Shopping, Other).\n" +
+        String prompt = "Analyze this receipt image. Extract the total expense amount, short itemized description or merchant name, date (YYYY-MM-DD), and suggested category (Food, Stay, Transit, Entertainment, Shopping, Other).\n" +
                 "Respond ONLY with a valid raw JSON object matching this structure (no markdown, no ```json):\n" +
                 "{\n" +
                 "  \"amount\": 45.50,\n" +
@@ -89,19 +92,16 @@ public class ReceiptOcrService {
             if (rawJson.endsWith("```")) rawJson = rawJson.substring(0, rawJson.length() - 3);
             rawJson = rawJson.trim();
 
-            return objectMapper.readValue(rawJson, Map.class);
+            Map<String, Object> parsed = objectMapper.readValue(rawJson, Map.class);
+            if (parsed.containsKey("amount")) {
+                try {
+                    BigDecimal amt = new BigDecimal(parsed.get("amount").toString()).setScale(2, RoundingMode.HALF_UP);
+                    parsed.put("amount", amt);
+                } catch (Exception ignored) {}
+            }
+            return parsed;
         }
 
-        throw new RuntimeException("Gemini Vision API returned error status: " + response.getStatusCode());
-    }
-
-    private Map<String, Object> generateFallbackReceiptData(String filename) {
-        Map<String, Object> fallback = new HashMap<>();
-        fallback.put("amount", 38.00);
-        fallback.put("description", "Receipt Expense (" + (filename != null ? filename : "Scanned") + ")");
-        fallback.put("category", "Food");
-        fallback.put("date", "2026-07-25");
-        fallback.put("confidence", "Simulated");
-        return fallback;
+        throw new RuntimeException("Gemini Vision API returned non-success HTTP status: " + response.getStatusCode());
     }
 }
